[package]
name = "cybervision"
version = "0.20.2"
edition = "2024"
authors = ["Dmitry Zolotukhin <zlogic@gmail.com>"]
repository = "https://github.com/zlogic/cybervision"
license = "Apache-2.0"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "rayon"] }
indicatif = { version = "0.17", default-features = false }
rayon = "*"
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "small_rng", "thread_rng"] }
nalgebra = { version = "0.33", default-features = false, features = ["std", "macros"] }
spade = { version = "2.13", default-features = false, features = ["std"] }
roots = { version = "0.0.8", default-features = false }
kamadak-exif = { version = "0.6", default-features = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ash = { version = "0.38", default-features = false, features = ["loaded"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.31", default-features = false, features = ["link"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
